Fix: Remove extra closing brace in xaxis object

--- a/index-apex.html
+++ b/index-apex.html
@@ -497,8 +497,7 @@
                     },
                     tickAmount: undefined, // Let ApexCharts auto-calculate
                     min: undefined,
-                    max: undefined
-                    },
+                    max: undefined,
                     axisBorder: { color: '#cccccc' },
                     axisTicks: { show: false },
                     crosshairs: {
