--- a/index-apex.html
+++ b/index-apex.html
@@ -544,6 +544,7 @@
                         hideOverlappingLabels: true,
                         datetimeUTC: false,
                         format: 'MMM yyyy',
+                        offsetX: 15, // Nudge labels right to center on Day 1-25 blocks
                         datetimeFormatter: {
                             year: 'yyyy',
                             month: 'MMM yyyy',
@@ -588,8 +589,8 @@
                     borderColor: '#e8e8e8',
                     strokeDashArray: 0,
                     padding: {
-                        left: 10,
-                        right: 30,
+                        left: 20,
+                        right: 20,
                         bottom: 15
                     }
                 },
