Clean lines: remove area fill from Our Data and Ahrefs, keep subtle Revenue

--- a/index-apex.html
+++ b/index-apex.html
@@ -547,14 +547,8 @@
                 },
                 colors: ['#f97316', '#3b82f6', '#10b981'],
                 fill: {
-                    type: ['gradient', 'gradient', 'solid'],
-                    gradient: {
-                        shadeIntensity: 1,
-                        opacityFrom: [0.4, 0.4, 0.25],
-                        opacityTo: [0.05, 0.05, 0.25],
-                        stops: [0, 90, 100]
-                    },
-                    opacity: [1, 1, 0.25]
+                    type: ['solid', 'solid', 'solid'],
+                    opacity: [0, 0, 0.25]
                 },
                 stroke: {
                     curve: ['smooth', 'smooth', 'stepline'],
