--- a/index-apex.html
+++ b/index-apex.html
@@ -623,13 +623,14 @@
                     opacity: [0, 0, 0.25, 0]
                 },
                 stroke: {
-                    curve: ['smooth', 'smooth', 'stepline', 'smooth'],
-                    width: [2, 2, 0, 2],
-                    dashArray: [0, 0, 0, 5] // DR is dotted line
+                    curve: ['smooth', 'smooth', 'stepline', 'straight'],
+                    width: [2, 2, 0, 3],
+                    dashArray: [0, 0, 0, 6] // DR is dotted line (thicker dash)
                 },
                 markers: {
-                    size: 0,
-                    hover: { size: 4 }
+                    size: [0, 0, 0, 2], // Small markers for DR to make line visible
+                    hover: { size: 5 },
+                    strokeWidth: 0
                 },
                 xaxis: {
                     type: 'datetime',
