Fix average traffic line styling to match monthly lines
- Changed strokeDash from 5 to 0 for average traffic series
- Internal/Ahrefs Average now display as solid lines like Monthly

--- a/index-apex.html
+++ b/index-apex.html
@@ -908,7 +908,7 @@
             if (showAverage) {
                 strokeCurve.push('smooth', 'smooth');
                 strokeWidth.push(2, 2);
-                strokeDash.push(5, 5); // Dashed lines for average
+                strokeDash.push(0, 0); // Solid lines for average (matches monthly)
                 fillOpacity.push(0, 0);
             }
             // Revenue
