--- a/index-apex.html
+++ b/index-apex.html
@@ -376,9 +376,48 @@
         .nav-link:hover {
             text-decoration: underline;
         }
+
+        /* User info and sign out */
+        .user-bar {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            background: #1f2937;
+            color: white;
+            padding: 8px 24px;
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
+            gap: 16px;
+            font-size: 13px;
+            z-index: 1000;
+        }
+
+        .user-bar .user-email {
+            color: #d1d5db;
+        }
+
+        .user-bar .sign-out {
+            color: #f97316;
+            text-decoration: none;
+            font-weight: 500;
+        }
+
+        .user-bar .sign-out:hover {
+            text-decoration: underline;
+        }
+
+        body {
+            padding-top: 56px !important;
+        }
     </style>
 </head>
 <body>
+    <div class="user-bar" id="userBar" style="display: none;">
+        <span class="user-email" id="userEmail"></span>
+        <a href="/api/auth/logout" class="sign-out">Sign Out</a>
+    </div>
     <div class="header">
         <h1>Traffic Comparison Dashboard</h1>
         <p>Our Data vs Ahrefs — All Available Data</p>
@@ -2091,6 +2130,21 @@
 
         // Initialize on page load - try CSV first, fallback to hardcoded
         loadDataFromCSV();
+
+        // Load user info for header bar
+        async function loadUserInfo() {
+            try {
+                const response = await fetch('/api/auth/me');
+                const data = await response.json();
+                if (data.authenticated && data.email) {
+                    document.getElementById('userEmail').textContent = data.email;
+                    document.getElementById('userBar').style.display = 'flex';
+                }
+            } catch (error) {
+                console.log('User info not available');
+            }
+        }
+        loadUserInfo();
     </script>
 </body>
 </html>
