Change user bar to non-sticky position
- Remove fixed positioning from user bar
- User bar now scrolls with page content
- Visible at top but doesn't follow on scroll

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -53,23 +53,17 @@
 
         /* User info and sign out */
         .user-bar {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            background: #1f2937;
-            color: white;
-            padding: 8px 24px;
             display: flex;
             align-items: center;
             justify-content: flex-end;
-            gap: 16px;
+            gap: 12px;
             font-size: 13px;
-            z-index: 1000;
+            margin-bottom: 16px;
+            color: #666;
         }
 
         .user-bar .user-email {
-            color: #d1d5db;
+            color: #666;
         }
 
         .user-bar .sign-out {
@@ -80,10 +74,6 @@
 
         .user-bar .sign-out:hover {
             text-decoration: underline;
-        }
-
-        body {
-            padding-top: 56px !important;
         }
 
         .tabs {
