--- a/index-apex.html
+++ b/index-apex.html
@@ -830,7 +830,7 @@
             
             // REVENUE LABEL CHANGE: Build point annotations and store globally for toggle
             // Use uniform Y position for all labels so they appear at same height near bottom of bars
-            const labelYPosition = maxRevenue * 0.15; // Position all labels low, just above the x-axis
+            const labelYPosition = maxRevenue * 0.05; // Position all labels very low, just above the x-axis
             
             currentAnnotations = revenueResult.revenueAnnotations.map(ann => ({
                 x: ann.x,
