January labels bold only, update cursorrules with session changes
- Remove orange color from January labels, keep bold only
- Document revenue label, x-axis label, and January highlighting lessons
- Update session log with today's changes

--- a/index-apex.html
+++ b/index-apex.html
@@ -1001,9 +1001,9 @@
                                 position: 'bottom',
                                 style: {
                                     background: 'transparent',
-                                    color: isJanuary ? '#f97316' : '#333333', // Orange for January
-                                    fontSize: isJanuary ? '12px' : '11px',
-                                    fontWeight: isJanuary ? 700 : 500, // Bold for January
+                                    color: '#333333',
+                                    fontSize: '11px',
+                                    fontWeight: isJanuary ? 700 : 500, // Bold for January to mark year start
                                     fontFamily: 'Inter, sans-serif',
                                     padding: { left: 0, right: 0, top: 0, bottom: 0 }
                                 },
