Agent page enhancements
- Change agent link color to blue across all pages
- Add Lifetime/Last 3 Months/Current Month tabs to agent.html
- Add Unknown option to agent selector for unassigned sites
- Update agent.html to blue theme to match niche page

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -182,7 +182,7 @@
         }
 
         .agent-cell a {
-            color: #f97316;
+            color: #3b82f6;
             text-decoration: none;
             font-weight: 500;
         }
