--- a/index-apex.html
+++ b/index-apex.html
@@ -332,7 +332,7 @@
         }
 
         .domain-meta .agent-link {
-            color: #f97316;
+            color: #3b82f6;
             text-decoration: none;
             font-weight: 500;
         }
