Branding updates and All Niches option
- Change agent.html back to orange branding to match dashboard/leaderboard
- Add "All Niches" option to niche.html dropdown showing all sites
- Show Niche column in table when viewing All Niches (clickable to filter)
- Add font-weight: 500 to niche links on dashboard to match agent links

--- a/index-apex.html
+++ b/index-apex.html
@@ -344,6 +344,7 @@
         .domain-meta .niche-link {
             color: #3b82f6;
             text-decoration: none;
+            font-weight: 500;
         }
 
         .domain-meta .niche-link:hover {
