--- a/agent.html
+++ b/agent.html
@@ -26,7 +26,7 @@
         .header h1 {
             font-size: 28px;
             font-weight: 700;
-            background: linear-gradient(135deg, #3b82f6 0%, #60a5fa 100%);
+            background: linear-gradient(135deg, #f97316 0%, #fb923c 100%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
@@ -47,7 +47,7 @@
 
         .nav-link {
             display: inline-block;
-            color: #3b82f6;
+            color: #f97316;
             text-decoration: none;
             font-size: 13px;
             font-weight: 500;
@@ -73,7 +73,7 @@
         }
 
         .user-bar .sign-out {
-            color: #3b82f6;
+            color: #f97316;
             text-decoration: none;
             font-weight: 500;
         }
@@ -104,13 +104,13 @@
         }
 
         .agent-btn:hover {
-            border-color: #3b82f6;
-            color: #3b82f6;
+            border-color: #f97316;
+            color: #f97316;
         }
 
         .agent-btn.active {
-            background: #3b82f6;
-            border-color: #3b82f6;
+            background: #f97316;
+            border-color: #f97316;
             color: white;
         }
 
@@ -135,13 +135,13 @@
         }
 
         .tab-btn:hover {
-            border-color: #3b82f6;
-            color: #3b82f6;
+            border-color: #f97316;
+            color: #f97316;
         }
 
         .tab-btn.active {
-            background: #3b82f6;
-            border-color: #3b82f6;
+            background: #f97316;
+            border-color: #f97316;
             color: white;
         }
 
@@ -191,7 +191,7 @@
 
         .rank-cell {
             font-weight: 700;
-            color: #3b82f6;
+            color: #f97316;
             font-size: 16px;
         }
 
@@ -205,7 +205,7 @@
         }
 
         .domain-cell a:hover {
-            color: #3b82f6;
+            color: #f97316;
             text-decoration: underline;
         }
 
