--- a/niche.html
+++ b/niche.html
@@ -26,7 +26,7 @@
         .header h1 {
             font-size: 28px;
             font-weight: 700;
-            background: linear-gradient(135deg, #3b82f6 0%, #60a5fa 100%);
+            background: linear-gradient(135deg, #f97316 0%, #fb923c 100%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
@@ -100,8 +100,8 @@
 
         .search-input:focus {
             outline: none;
-            border-color: #3b82f6;
-            box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.1);
+            border-color: #f97316;
+            box-shadow: 0 0 0 3px rgba(249, 115, 22, 0.1);
         }
 
         .search-input::placeholder {
@@ -141,8 +141,8 @@
         }
 
         .niche-option.selected {
-            background: #eff6ff;
-            color: #3b82f6;
+            background: #fff7ed;
+            color: #f97316;
             font-weight: 500;
         }
 
@@ -198,7 +198,7 @@
 
         .rank-cell {
             font-weight: 700;
-            color: #3b82f6;
+            color: #f97316;
             font-size: 16px;
         }
 
@@ -212,7 +212,7 @@
         }
 
         .domain-cell a:hover {
-            color: #3b82f6;
+            color: #f97316;
             text-decoration: underline;
         }
 
