Update Ahrefs icon to official logo and increase size
- Changed to blue background with orange 'a' for better visibility
- Increased icon size ~50% across all pages

--- a/index-apex.html
+++ b/index-apex.html
@@ -340,10 +340,11 @@
         }
 
         .ahrefs-link img {
-            width: 18px;
-            height: 18px;
-            opacity: 0.7;
+            width: 26px;
+            height: 26px;
+            opacity: 0.85;
             transition: opacity 0.2s ease;
+            border-radius: 4px;
         }
 
         .ahrefs-link:hover img {
