--- a/leaderboard.html
+++ b/leaderboard.html
@@ -185,10 +185,11 @@
         }
 
         .ahrefs-link img {
-            width: 14px;
-            height: 14px;
-            opacity: 0.7;
+            width: 20px;
+            height: 20px;
+            opacity: 0.85;
             transition: opacity 0.2s ease;
+            border-radius: 3px;
         }
 
         .ahrefs-link:hover img {
